[gd_scene load_steps=4 format=2]

[ext_resource path="res://ASSETS/sprites/objects/guns/tile_681.png" type="Texture" id=1]
[ext_resource path="res://scenes/Gun.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.52101
height = 7.95712

[node name="Gun" type="Area2D"]
z_index = 1
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
offset = Vector2( 3, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5.14048, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="BulletPoint" type="Node2D" parent="."]
position = Vector2( 15.0005, 3.56931e-05 )
[connection signal="timeout" from="FireRateTimer" to="." method="_on_FireRateTimer_timeout"]
